--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,9 @@
         <h1>Agit & Co</h1>
     </div>
     <div class="col-lg-4 visible wow fadeInDown">
-        <p>Gg. Loncang Kutuwates, Kragilan, Sinduadi, Kec. Mlati, <br/> Kabupaten Sleman, Daerah Istimewa Yogyakarta 55284</p>
+        <p>Thank you so much for your interest with Agit & Co. As visual explorers, we dedicate our love on building a memories of you! We believe that there’s no such thing as coincidence. The universe align for us to meet. 
+            <br><br>
+            Please don’t hesitate to contact us through our details below  :</p>
         <p>agitandco@gmail.com</p>
         <p>+62(0)87 700 170 777</p>
         <p>agitandco.com</p>
