--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer class="row justify-content-between py-5 px-2 ">
+<footer class="foot row justify-content-between py-5 px-2 ">
     <div class="col-lg-2 visible wow fadeInLeft">
         <h1>Agit & Co</h1>
     </div>
@@ -16,4 +16,14 @@
             <a href="https://www.bridestory.com/id/agit-and-co" target="_blank"><i class="bi bi-bootstrap"></i></a>
         </div>
     </div>
+    <div class="copyright">
+        <p>&copy; Copyright <strong><span>Sirius</span></strong>. All Rights Reserved</p>
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://Sirius.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://Sirius.com/nice-admin-bootstrap-admin-html-template/ -->
+        <p>Designed by <a href="https://instagram.com/siriuscreative_">Sirius Creative</a></p>
+      </div>
 </footer>
