--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>&copy; Copyright <strong><span>Sirius</span></strong>. All Rights Reserved</p>
+        <p>&copy; Copyright <strong><span><a href="https://instagram.com/siriuscreative_">Sirius Creative</a></span></strong>. All Rights Reserved</p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
